--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "React.js-Overtime-Randomizer"
+  "homepage": "https://mveregge23.github.io/React.js-Overtime-Randomizer"
 }
